# UBenchAI-Framework

./: .env.example  GETTING_STARTED_MONITORING.md  MONITORING_SETUP_SUMMARY.md  PROMETHEUS_GRAFANA_CONNECTION_FIXES.md  README.md  deploy_complete.sh  main.py  pyproject.toml  temp.md  test.sh  test_connection_fix.py  test_vllm.sh  validate_fixes.py
.github/workflows/: ci.yml
config/: slurm.yml
dashboards/: ollama-metrics.json  qdrant-metrics.json  vllm-metrics.json
docs/: MONITORING_ARCHITECTURE.md  MONITORING_DEPLOYMENT_GUIDE.md  MONITORING_QUICK_REFERENCE.md
examples/AriannaAmadini/: slurm-3601914.out  slurm-3604150.out
examples/ElizabethVK/: slurm-3614042.out
examples/ElizabethVK/phase1/: slurm-3614013.out
examples/albtad01/: hello_sbatch.sh  ollama_sbatch.sh  slurm-3602103.out  slurm-3602230.out
examples/dnyse/: slurm-3609959.out  slurm-3609965.out
logs/monitors/081ba8f4-b0a0-48c7-ad4d-aaec4b8c8c0f/: instance.json
logs/monitors/4915f0e3-844b-47ce-8218-41b77a789094/: instance.json  metrics.json
logs/monitors/77010e77-2e16-4a14-9bc1-d080dc4cae99/prometheus/config/: prometheus.yml
logs/monitors/9dd6a02f-0505-43f3-9ef6-4a7752f91a32/: instance.json  metrics.json
logs/monitors/ab665b28-22db-480e-ba1e-a2d6c52b5fb5/: instance.json  metrics.json
logs/monitors/b86a5811-5ac5-4977-8a54-8fed4bf486d7/: instance.json  metrics.json
logs/monitors/ce3c95ea-f989-43f2-af75-408817df4c97/: metrics.json
logs/monitors/e8c4b49d-7151-4cd1-8703-39924e2de773/: instance.json  metrics.json
ollama-exporter/: ollama_metrics_exporter.py
recipes/: chroma_vectordb.yml  example.yml  monitor-full-stack.yml  monitor-hpc-stack.yml  monitor-local.yml  ollama-llm.yml  ollama-tiny.yml  ollama.yml  qdrant-vectordb.yml  qdrant.yml  report-sample.yml  vllm-multinode.yml  vllm-ray-multinode.yml  vllm-singlenode.yml  vllm.yml
recipes/clients/: ollama-simple-test.yml  ollama-stress-multinode.yml  ollama-stress-test.yml  qdrant-simple-test.yml  qdrant-stress-multinode.yml  qdrant-stress-test.yml  qdrant-stress.yml  stress-test.yml  vllm-simple-test.yml  vllm-stress-multinode.yml  vllm-stress-test.yml  vllm-stress-test2.yml  vllm-stress.yml
recipes/monitors/: grafana-monitor.yml  ollama-monitor.yml  prometheus-monitor.yml  qdrant-monitor.yml  vllm-monitor.yml
recipes/server/: ollama-llm.yml
reports_output/5fa0670a-c6e5-483b-8378-622d29e0f6da/: report.html  report.json
reports_output/a45e5a35-fb72-4979-af28-fb571f47b385/: report.json
reports_output/c81dc76d-7694-4c10-bd76-f2281538d08f/: report.html  report.json
results/: ollama-simple-test_2ef3db6f_results.json  ollama-simple-test_3f2d2f0c_results.json  ollama-simple-test_9a271763_results.json  ollama-simple-test_d270a666_results.json  ollama-stress-test_745fe20c_results.json  qdrant-simple-test_1cf3abfb_results.json  qdrant-simple-test_41fa7780_results.json  qdrant-simple-test_fa4e3573_results.json  qdrant-stress-test_1215ad00_results.json  qdrant-stress-test_8f8ac61c_results.json  vllm-simple-test_3e7af9af_results.json  vllm-simple-test_5ee3afd9_results.json  vllm-simple-test_e1edf5c6_results.json  vllm-stress-test_ffcb213d_results.json
scripts/: README.md  check_monitoring_status.sh  deploy_monitoring_stack.sh  register_target.py  run_all_client_tests.sh  start_cadvisor.sh  start_node_exporter.sh  stop_monitoring.sh  test_ollama_client.sh  test_ollama_server.sh  test_ollama_server_persistent.sh  test_qdrant_client.sh  test_qdrant_server.sh  test_qdrant_server_persistent.sh  test_vllm_singlenode_client.sh  test_vllm_singlenode_server.sh  test_vllm_singlenode_server_persistent.sh
src/ubenchai/: __init__.py  __main__.py  cli.py
src/ubenchai/analysis/: __init__.py  analyzer.py
src/ubenchai/clients/: __init__.py  aggregate_results.py  client_orchestrator.py  health_resolver.py  manager.py  recipe_loader.py  recipes.py  runs.py  workload_generator.py
src/ubenchai/health/: __init__.py  checker.py
src/ubenchai/logs/: __init__.py
src/ubenchai/monitors/: __init__.py  grafana_client.py  instances.py  manager.py  models.py  orchestrator.py  prometheus_client.py  recipe_loader.py  recipes.py
src/ubenchai/reports/: __init__.py  manager.py  models.py  recipe_loader.py
src/ubenchai/servers/: __init__.py  manager.py  orchestrator.py  recipe_loader.py  services.py  slurm_orchestrator.py
src/ubenchai/web/: __init__.py  dashboard.py
templates/: base.html  clients.html  dashboard.html  detailed_report.html  monitors.html  report_view.html  servers.html
tests/: test_monitor_stack.py  test_recipe_loader.py  test_server_manager.py  test_services.py  test_slurm_orchestrator.py
(+9 files in other folders)
